repeatable sql migration
Signed-off-by: Xin Li <xin.li@swirldslabs.com>